uploaded new index and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cecile's Homepage</title>
+    <title>Cecile-Anne Sison Biography</title>
 </head>
 <body>
-    <p>CONTENT. It is here.</p>
+    <h1>Student Bio</h1>
+    <h2>Cecile-Anne Sison</h2>
+    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/43951122_10103140301717005_8959570416775462912_n.jpg?_nc_cat=105&_nc_oc=AQlWl_GoqaW6CtFJTwgZS2PzIKY8HJoRZxTk1ImWLRHiyZ_mh_riK0fbkPfFlF1sFHQ&_nc_ht=scontent-ort2-1.xx&oh=3e5dccedc085fab116cf099e83e3dd3e&oe=5DAC72DB" width=500px alt="Cecile at Wandr Museum Kusama Exhibit">
+    <br>
+    <p>Cecile is a Canadian living in Chicago, who (like most people) really enjoys art, music and film. </p>
+    <p>She has lived in Hong Kong, the Philippines and US, working on films and projects as a photographer, a metadata specialist and a second assistant camera on a sitcom. While working for the Mellon foundation on a grant, she quickly realized that academia was where she belonged.</p>
+    <br>
+    <h2>Contact Information</h2>
+    <br>
+    <ul>
+        <li><strong>Email:</strong><a href="mailto:cecileannesison@gmail.com">cecileannesison@gmail.com</a></li>
+        <li><strong>GitHub:</strong><a href="https://github.com/cecileanne/">http://github.com/cecileanne</a></li>
+        <li><strong>Portfolio:</strong><a href="#">Coming Soon</a></li>
+    </ul>
+
 </body>
 </html>
