copy Portfolio from November 2019 to replace June class activity

--- a/index.html
+++ b/index.html
@@ -1,27 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cecile-Anne Sison Biography</title>
-    <link rel="stylesheet" href="PortfolioStyle.css">
-</head>
-<body>
-    <h1>Student Bio</h1>
-    <h2>Cecile-Anne Sison</h2>
-    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/43951122_10103140301717005_8959570416775462912_n.jpg?_nc_cat=105&_nc_oc=AQlWl_GoqaW6CtFJTwgZS2PzIKY8HJoRZxTk1ImWLRHiyZ_mh_riK0fbkPfFlF1sFHQ&_nc_ht=scontent-ort2-1.xx&oh=3e5dccedc085fab116cf099e83e3dd3e&oe=5DAC72DB" width=500px alt="Cecile at Wandr Museum Kusama Exhibit">
-    <br>
-    <p>Cecile is a Canadian living in Chicago, who (like most people) really enjoys art, music and film. </p>
-    <p>She has lived in Hong Kong, the Philippines and US, working on films and projects as a photographer, a metadata specialist and a second assistant camera on a sitcom. While working for the Mellon foundation on a grant, she quickly realized that academia was where she belonged.</p>
-    <br>
-    <h2>Contact Information</h2>
-    <br>
-    <ul>
-        <li><strong>Email:</strong><a href="mailto:cecileannesison@gmail.com">cecileannesison@gmail.com</a></li>
-        <li><strong>GitHub:</strong><a href="https://github.com/cecileanne/">http://github.com/cecileanne</a></li>
-        <li><strong>Portfolio:</strong><a href="#">Coming Soon</a></li>
-    </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Cecile-Anne Sison, Full Stack Developer</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-</body>
-</html>
+    <!-- Google Font - Play -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Play&display=swap"
+      rel="stylesheet"
+    />
+    <!-- My stylesheet  -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
+  </head>
+  
+  <body>
+    <container>
+    <div class="row">
+      <div class="col s12 m6 l5" id="frozenSide">
+        <img src="./assets/images/CecileProfilePixelsWandr.JPG" alt="pixelated image of Cecile" width="100%">
+        <h3 class="noMargin mainContact"><a href="#" id="myName"><b>Cecile-Anne Sison</b></a></h3>
+        <div class="contactItem">
+            <a href="mailto:cecileannesison@gmail.com">
+                <img class="logoPic" src="./assets/images/logo-gmail.png"
+                />
+            </a>  
+        </div> 
+        <div class="contactItem">
+          <a href="https://github.com/cecileanne"
+          ><img class="logoPic" src="./assets/images/logo-github.png"
+          /></a>
+        </div>
+        <div class="contactItem">
+          <a href="https://www.linkedin.com/in/cecile-anne-sison-807054160/"
+          ><img class="logoPic" src="./assets/images/logo-linked.jpg"
+          /></a>
+        </div>
+        <div class="contactItem">
+          <a href="https://instagram.com/microforcezoom/"
+          ><img class="logoPic" src="./assets/images/logo-insta.jpg"
+          /></a>
+        </div>
+        <div class="contactItem">
+          <a href="https://twitter.com/microforcezoom"
+          ><img class="logoPic" src="./assets/images/logo-twitter.png"
+          /></a>
+        </div>
+        <!-- <div class="duckBottom">
+          <img id="duck" src="../assets/images/duck.png" alt="Cecile's coding duck" width="200px">
+        </div> -->
+      </div>
+      <!-- closes col5 -->
+      
+      <div class="col s12 m6 l7 offset5" id="scrollSpace">
+        <div class="row assetDiv" id="asset1">
+          <h4 class="noMargin">Hi! I'm Cecile</h4>
+          <p>
+            I'm a student programmer living in Chicago and am currently
+            Instructional Technology Lead of the
+            <a href="http://web.madstudio.northwestern.edu/"
+            >Media and Design Studio</a
+            >
+            at Northwestern University. My focus is in incorporating
+            game design and game play into pedagogy which means I hope to
+            develop tools, sites and software that can be used in academia. 
+          </p><br>
+          <p>Some of my other interests include work in diversity, equity, and inclusion (DEI) and making my own coding accessible/WCAG 2.1 compliant. I am also an avid Pokemon Go player, enjoy international travel and adventurous eating.</p><br>
+          <p>I'm a JAM-stack developer today, and will be a certified full-stack MERN developer in January 2020 (coming soon). My strength is in project management but I am confident with front-end and back-end. Contact me if you would like to develop something!</p>
+        </div>
+        <!-- closes asset1  -->
+        <div class="row assetDiv" id="asset2">
+          <h4 class="noMargin">Work</h4>
+
+          <div class="portfolioItem">
+              <a href="./public/spacechasersPort.html">
+                <img
+                  src="./assets/images/spacechaseSS.png"
+                  alt="screenshot of code"
+                />
+              </a>
+              <div class="portfolioNameOverlay">
+                <a href="./public/spacechasersPort.html">
+                  <h5 class="noMargin">SpaceChasers</h5>
+                </a>
+              </div>
+            </div>
+
+          <div class="portfolioItem">
+            <a href="./public/scorekeeperPort.html">
+              <img
+                src="./assets/images/scorekeeperSS.png"
+                alt="screenshot of code"
+              />
+            </a>
+            <div class="portfolioNameOverlay">
+              <a href="./public/scorekeeperPort.html">
+                <h5 class="noMargin">ScoreKeeper</h5>
+              </a>
+            </div>
+          </div>
+
+        </div>
+        <!-- closes asset2  -->
+        <div class="row assetDiv" id="asset3">
+            <h4 class="noMargin">Skills</h4>
+            <div class="row">
+
+              <div class="col 7">
+                <p>
+                  <ul>
+                      <li>HTML/CSS with a focus on responsive design</li>
+                      <li>Bootstrap, Materialize, Bulma style frameworks</li>
+                      <li>Handlebars, React/JSX HTML templating</li>
+                      <li>Javascript</li>
+                      <li>JQuery</li>
+                      <li>Node JS</li>
+                      <li>Node Package Manager</li>
+                      <li>Express</li>
+                      <li>MySQL</li>
+                      <li>Mongo</li>
+                      <li>Heroku</li>
+                    </ul>
+                </p>
+                <br>
+                <p>BS Communications, Northwestern University - Radio/Television/Film</p>
+              </div>
+              
+              <div class="col 5" id="duckWork">
+                <br>
+                <img id="duck" src="./assets/images/duck.png" alt="Cecile's coding duck">
+              </div>
+
+            </div>
+            <!-- closes row -->
+          </div>
+            <!-- closes asset3  -->
+        <!-- <div class="row assetDiv" id="asset4">
+            <h4 class="noMargin">More</h4>
+            <p>awards, speaking engagements, interests</p>
+          </div> -->
+          <!-- closes asset4  -->
+      </div>
+      <!-- above closes scrollspace col7 -->
+    <!-- </div> -->
+    <!-- closes row -->
+    </container>
+  </body>
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+  </html>
+  
